Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.1.0
-
None
-
Qt Creator 4.1.0
Windows 10
Description
If "Make" step is defined in Deployment settings, the default make command is overridden even if the corresponding field is left empty, so that deployment can't be executed
Compile output:
16:14:57: Running steps for project untitled...
16:14:57: Configuration unchanged, skipping qmake step.
16:14:57: Starting: "C:\Qt\Qt5.7.0_mingw\Tools\mingw530_32\bin\mingw32-make.exe"
C:/Qt/Qt5.7.0_mingw/Tools/mingw530_32/bin/mingw32-make -f Makefile.Debug
mingw32-make[1]: Entering directory 'D:/devel/temp/build-untitled-Qt_5_7_0_mingw530_32-Debug'
mingw32-make[1]: Nothing to be done for 'first'.
mingw32-make[1]: Leaving directory 'D:/devel/temp/build-untitled-Qt_5_7_0_mingw530_32-Debug'
16:14:57: The process "C:\Qt\Qt5.7.0_mingw\Tools\mingw530_32\bin\mingw32-make.exe" exited normally.
16:14:57: Could not start process "" install
Error while building/deploying project untitled (kit: Qt 5.7.0 (mingw530_32))
When executing step "Make"
16:14:57: Elapsed time: 00:00.
Steps to reproduce:
1. Create a new project
2. Go to Projects -> Run
3. Add deploy step -> Make
4. Enter "install" in Make arguments
5. Build & deploy
Workaround:
1. Enter actual path to "make" in the override field
Attachments
Issue Links
- is duplicated by
-
QTCREATORBUG-16889 Adding project deploy step "make" with parameter does not call make
-
- Closed
-
-
QTCREATORBUG-17120 Deploy failed because of empty executable path
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-16795 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
169511,2 | Qmake: Make makesteps work in DeployConfiguration again | 4.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |