Qmake: Make makesteps work in DeployConfiguration again

Task-number: QTCREATORBUG-16795
Change-Id: I0772114a82dfd7d41002dc91e3ae5702434b952d
Reviewed-by: Eike Ziller <eike.ziller@qt.io>